--- a/LibraryTestAppMaui/LibraryTestAppMaui/MainPage.xaml
+++ b/LibraryTestAppMaui/LibraryTestAppMaui/MainPage.xaml
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             	xmlns:ve="clr-namespace:LibraryTestAppMaui;assembly=LibraryTestAppMaui"
+
              x:Class="LibraryTestAppMaui.MainPage">
 
            <ContentPage.Resources>
         <ResourceDictionary>
-
+             <Style x:Key="InfoAlertTitle" TargetType="Label">
+                <Setter Property="HorizontalOptions">Center</Setter>
+                <Setter Property="HorizontalTextAlignment">Center</Setter>
+                <Setter Property="ve:TypographyEffect.LineHeight" Value="30" />
+                <Setter Property="ve:TypographyEffect.FontWeight" Value="Bold" />
+                <Setter Property="TextColor" Value="Black" />
+            </Style>
         </ResourceDictionary>   
     </ContentPage.Resources>
 
@@ -13,23 +21,8 @@
               
      
     <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-
-        <Button  Text="Scan" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand"/>
+            <Label Padding="10,100,10,0" Text="Welcome to Xamarin.Forms!" Style="{StaticResource InfoAlertTitle}" HorizontalTextAlignment="Center"/>
+       
 
 
     </StackLayout>
